@@ -50,42 +50,47 @@ from bzrlib.tests.bzrdir_implementations.test_bzrdir import TestCaseWithBzrDir
 from bzrlib.transport.memory import MemoryServer
 
 
-class RepositoryTestProviderAdapter(TestScenarioApplier):
-    """A tool to generate a suite testing multiple repository formats at once.
+def formats_to_scenarios(formats, transport_server, transport_readonly_server,
+    vfs_transport_factory=None):
+    """Transform the input formats to a list of scenarios.
 
-    This is done by copying the test once for each transport and injecting
-    the transport_server, transport_readonly_server, and bzrdir_format and
-    repository_format classes into each copy. Each copy is also given a new id()
-    to make it easy to identify.
+    :param formats: A list of (repository_format, bzrdir_format).
     """
+    result = []
+    for repository_format, bzrdir_format in formats:
+        scenario = (repository_format.__class__.__name__,
+            {"transport_server":transport_server,
+             "transport_readonly_server":transport_readonly_server,
+             "bzrdir_format":bzrdir_format,
+             "repository_format":repository_format,
+             })
+        # Only override the test's vfs_transport_factory if one was
+        # specified, otherwise just leave the default in place.
+        if vfs_transport_factory:
+            scenario[1]['vfs_transport_factory'] = vfs_transport_factory
+        result.append(scenario)
+    return result
 
-    def __init__(self, transport_server, transport_readonly_server, formats,
-                 vfs_transport_factory=None):
-        TestScenarioApplier.__init__(self)
-        self._transport_server = transport_server
-        self._transport_readonly_server = transport_readonly_server
-        self._vfs_transport_factory = vfs_transport_factory
-        self.scenarios = self.formats_to_scenarios(formats)
-    
-    def formats_to_scenarios(self, formats):
-        """Transform the input formats to a list of scenarios.
 
-        :param formats: A list of (repository_format, bzrdir_format).
-        """
-        result = []
-        for repository_format, bzrdir_format in formats:
-            scenario = (repository_format.__class__.__name__,
-                {"transport_server":self._transport_server,
-                 "transport_readonly_server":self._transport_readonly_server,
-                 "bzrdir_format":bzrdir_format,
-                 "repository_format":repository_format,
-                 })
-            # Only override the test's vfs_transport_factory if one was
-            # specified, otherwise just leave the default in place.
-            if self._vfs_transport_factory:
-                scenario[1]['vfs_transport_factory'] = self._vfs_transport_factory
-            result.append(scenario)
-        return result
+def all_repository_format_scenarios():
+    """Return a list of test scenarios for parameterising repository tests."""
+    registry = repository.format_registry
+    all_formats = [registry.get(k) for k in registry.keys()]
+    all_formats.extend(weaverepo._legacy_formats)
+    # format_scenarios is all the implementations of Repository; i.e. all disk
+    # formats plus RemoteRepository.
+    format_scenarios = formats_to_scenarios(
+        [(format, format._matchingbzrdir) for format in all_formats],
+        default_transport,
+        # None here will cause a readonly decorator to be created
+        # by the TestCaseWithTransport.get_readonly_transport method.
+        None)
+    format_scenarios.extend(formats_to_scenarios(
+        [(RemoteRepositoryFormat(), RemoteBzrDirFormat())],
+        SmartTCPServer_for_testing,
+        ReadonlySmartTCPServer_for_testing,
+        MemoryServer))
+    return format_scenarios
 
 
 class TestCaseWithRepository(TestCaseWithBzrDir):
@@ -832,31 +837,9 @@ all_broken_scenario_classes = [
     IncorrectlyOrderedParentsScenario,
     UnreferencedFileParentsFromNoOpMergeScenario,
     ]
-    
+
 
 def test_suite():
-    registry = repository.format_registry
-    all_formats = [registry.get(k) for k in registry.keys()]
-    all_formats.extend(weaverepo._legacy_formats)
-    disk_format_adapter = RepositoryTestProviderAdapter(
-        default_transport,
-        # None here will cause a readonly decorator to be created
-        # by the TestCaseWithTransport.get_readonly_transport method.
-        None,
-        [(format, format._matchingbzrdir) for format in all_formats])
-
-    remote_repo_adapter = RepositoryTestProviderAdapter(
-        SmartTCPServer_for_testing,
-        ReadonlySmartTCPServer_for_testing,
-        [(RemoteRepositoryFormat(), RemoteBzrDirFormat())],
-        MemoryServer
-        )
-
-    # format_scenarios is all the implementations of Repository; i.e. all disk
-    # formats plus RemoteRepository.
-    format_scenarios = (disk_format_adapter.scenarios +
-                        remote_repo_adapter.scenarios)
-
     prefix = 'bzrlib.tests.repository_implementations.'
     test_repository_modules = [
         'test_break_lock',
@@ -882,6 +865,7 @@ def test_suite():
                         for module_name in test_repository_modules]
 
     # Parameterize repository_implementations test modules by format.
+    format_scenarios = all_repository_format_scenarios()
     result = multiply_tests_from_modules(module_name_list, format_scenarios)
 
     # test_check_reconcile needs to be parameterized by format *and* by broken
